Fixed Alignment

--- a/members.css
+++ b/members.css
@@ -40,7 +40,7 @@ h2 {
 }
 
 .member {
-  flex: 1 1 300px;
+  flex: 1 1 500px;
   margin: 10px;
   padding: 25px;
   background: lightcyan;
@@ -68,6 +68,7 @@ h2 {
   margin: -20px;
   margin-top: 10px;
   color: white;
+  justify-content: center;
 }
 
 .box {
@@ -75,6 +76,7 @@ h2 {
   padding: 5px;
   margin: 5px;
   font-size: 11px;
+  width: 150px;
 }
 
 .vini {
